# BitRPG

./: .gitignore  BitRPG.sublime-project  CMakeLists.txt  index.html  params.json
examples/: Introductory Sequence.js  level1.js
src/: Application.cpp  Application.h  BitRPG.h  CMakeLists.txt  Console.cpp  Console.h  ConsoleObject.cpp  ContentManager.cpp  ContentManager.h  Counter.cpp  Counter.h  DisplayManager.cpp  DisplayManager.h  Entity.cpp  Entity.h  EventManager.cpp  EventManager.h  Exception.cpp  Exception.h  GameObject.cpp  GameObject.h  ItemObject.cpp  ItemObject.h  JSONValue.cpp  JSONValue.h  MapManager.cpp  MapManager.h  MapObject.cpp  MapObject.h  MapState.cpp  MapState.h  MapTile.h  Screen.cpp  Screen.h  ScriptException.h  ScriptManager.cpp  ScriptManager.h  ScriptObject.cpp  ScriptObject.h  SharedSprite.cpp  (+9 more)
src/game/: Animation.h  Character.cpp  Character.h  Entity.cpp  Entity.h  EntityType.cpp  EntityType.h  GameScreen.cpp  GameScreen.h  Map.cpp  Map.h  MapTile.h
src/garbage/: EventManager.cpp  EventManager.h  MapLayer.cpp  MapLayer.h
src/objects/: AudioObject.cpp  AudioObject.h  ConsoleObject.cpp  ConsoleObject.h  ConstructorObject.cpp  ConstructorObject.h  EntityObject.cpp  EntityObject.h  GameObject.cpp  GameObject.h  ItemObject.cpp  ItemObject.h  MapObject.cpp  MapObject.h  SplashObject.h
